Agrega h1 al html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Rock paper sissors</title>
 </head>
 <body>
-    
+    <h1>PIEDRA PAPEL O TIJERA</h1>
 
     <script src="script.js"></script>
 </body>
