--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-    <h1>PIEDRA PAPEL O TIJERA</h1>
+    <h1>Rock, paper or sissors.</h1>
 
     <div class="contenedor">
-        <div id="rock"></div>
-        <div id="paper"></div>
-        <div id="sissor"></div>
+        <div class="caja" id="rock"></div>
+        <div class="caja" id="paper"></div>
+        <div class="caja" id="sissor"></div>
     </div>
 
     <script src="script.js"></script>
