Add event listeners for every div

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <h1>Rock, paper or sissors.</h1>
 
     <div class="contenedor">
-        <div class="caja" id="rock"></div>
-        <div class="caja" id="paper"></div>
-        <div class="caja" id="sissor"></div>
+        <div class="caja" id="piedra"></div>
+        <div class="caja" id="papel"></div>
+        <div class="caja" id="tijera"></div>
     </div>
 
+    <p></p>
+    <h2></h2>
     <script src="script.js"></script>
 </body>
 
