Add some text and styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <h1>Rock, paper or sissors.</h1>
-
+    <br>
+    <h4>(best of 5)</h4>
     <div class="contenedor">
         <div class="caja" id="piedra"></div>
         <div class="caja" id="papel"></div>
